# skillscan

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  SECURITY.md  deny.toml  install.sh
.github/actions/scan/: README.md  action.yml
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: scan.rs
docs/: pre-commit.md  threat-model.md  writing-rules.md
docs/rules/: index.md
src/: cli.rs  lib.rs  main.rs
src/engine/: llm.rs  mod.rs
src/engine/ast/: bash.rs  mod.rs  python.rs
src/loaders/: directory.rs  mod.rs
src/model/: finding.rs  frontmatter.rs  mod.rs  report.rs  severity.rs  skill.rs
src/reporters/: html.rs  json.rs  markdown.rs  mod.rs  sarif.rs  terminal.rs
src/rules/: cmp_001.rs  cmp_002.rs  cmp_003.rs  cmp_004.rs  cmp_006.rs  cq_001.rs  cq_002.rs  cq_003.rs  cq_004.rs  cq_005.rs  cq_006.rs  inj_001.rs  inj_009.rs  mod.rs  prm_001.rs  prm_002.rs  prm_003.rs  prm_004.rs  prm_006.rs  prm_007.rs  sec_001.rs  sup_001.rs  sup_002.rs  sup_004.rs  yaml.rs
src/rules/packs/builtin/: SKILL-EXF-001-paste-services.yml  SKILL-EXF-002-dns-subdomain.yml  SKILL-EXF-003-credential-dirs.yml  SKILL-EXF-004-env-dump.yml  SKILL-EXF-005-clipboard.yml  SKILL-EXF-006-webhook.yml  SKILL-EXF-007-netcat.yml  SKILL-EXF-008-cloud-metadata.yml  SKILL-INJ-003-ignore-previous.yml  SKILL-INJ-004-role-switch.yml  SKILL-INJ-005-base64-blob.yml  SKILL-INJ-007-hidden-html-comment.yml  SKILL-INJ-008-long-line.yml  SKILL-INJ-010-bidi-controls.yml  (+17 more)
tests/: cli.rs  scan.rs
(+1 files in other folders)
