[package]
name = "skillscan"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Armur-AI <hello@armur.ai>"]
description = "Security scanner for Claude Skills"
license = "Apache-2.0"
repository = "https://github.com/Armur-Ai/skillscan"
homepage = "https://github.com/Armur-Ai/skillscan"
readme = "README.md"
keywords = ["security", "claude", "skill", "scanner", "ai"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
owo-colors = { version = "4.1", features = ["supports-colors"] }
walkdir = "2.5"
ignore = "0.4"
regex = "1.11"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.40", features = ["yaml", "json"] }
tempfile = "3.13"

[lib]
name = "skillscan"
path = "src/lib.rs"

[[bin]]
name = "skillscan"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
